--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             
             <div class="about-content reveal">
                 <div class="about-image">
-                    <img src="headshot.jpg" alt="Puja Das" class="profile-img">
+                    <img src="headshot.JPG" alt="Puja Das" class="profile-img">
                 </div>
                 <div class="about-text">
                     <p>I am a climate scientist and data science expert with a PhD in Interdisciplinary Engineering from Northeastern University. My research focuses on extreme weather modeling and developing AI-driven solutions for precipitation forecasting and flood risk assessment.</p>
