--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section id="about" class="section about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
-            <p class="section-subtitle">Climate scientist and data science expert with 5+ years developing AI-driven solutions</p>
+            <p class="section-subtitle">Climate scientist and data science expert with 5+ years experience in developing remote sensing and AI-driven solutions</p>
             
             <div class="about-content reveal">
                 <div class="about-image">
