--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 
             <div class="stats reveal">
                 <div class="stat">
-                    <div class="stat-number">5+</div>
+                    <div class="stat-number">5 + </div>
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat">
-                    <div class="stat-number">10+</div>
-                    <div class="stat-label">Publications + Presentations</div>
+                    <div class="stat-number">10 + </div>
+                    <div class="stat-label">s + Presentations</div>
                 </div>
                 <div class="stat">
                     <div class="stat-number">10+</div>
