--- a/index.html
+++ b/index.html
@@ -89,14 +89,13 @@
     <section id="experience" class="section">
         <div class="container">
             <h2 class="section-title">Professional Experience</h2>
-            <p class="section-subtitle">My journey in climate science and AI research</p>
 
             <div class="experience-grid reveal">
                 <div class="experience-card">
                     <div class="experience-date">Feb 2025 - Present</div>
                     <h3 class="experience-title">Postdoctoral Research Fellow</h3>
                     <div class="experience-company">Institute of Experiential AI, Northeastern University</div>
-                    <p class="experience-description">Leading advanced research in AI applications for climate science and environmental prediction systems.</p>
+                    <p class="experience-description">Leading advanced research in AI applications for weather, climate and hydrologic forecasting.</p>
                 </div>
 
                 <div class="experience-card">
@@ -160,8 +159,8 @@
                     <div class="project-icon">
                         <i class="fas fa-satellite"></i>
                     </div>
-                    <h3 class="project-title">CMIP6 Model Evaluation</h3>
-                    <p class="project-description">Advancing runoff projections through enhanced process parameterization and model consensus using CMIP6 Earth System Models for major global basins.</p>
+                    <h3 class="project-title">Next-Generation Climate Modeling</h3>
+                    <p class="project-description">Systematic evaluation of CMIP6 vs CMIP5 models revealing that finer resolutions and comprehensive physical processes improve runoff projections across 30 major global watersheds.</p>
                     <div class="project-tags">
                         <span class="tag">Climate Modeling</span>
                         <span class="tag">Hydrology</span>
