--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Puja Das - Climate Scientist & AI Expert</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FLD4GEVNW4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FLD4GEVNW4');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
