--- a/index.html
+++ b/index.html
@@ -208,19 +208,19 @@
                 </div>
 
                 <div class="publication-item">
-                    <div class="publication-title"><a href="https://www.nature.com/articles/s41612-024-00834-8" target="_blank">Finer Resolutions and Targeted Process Representations in Earth Systems Models Improve Hydrologic Projections</a></div>
+                    <div class="publication-title"><a href="https://arxiv.org/abs/2409.14243" target="_blank">Finer Resolutions and Targeted Process Representations in Earth Systems Models Improve Hydrologic Projections</a></div>
                     <div class="publication-journal">Preprint at arXiv 2409.14243, 2024 (Under Review)</div>
                     <div class="publication-authors">Das, P., Ganguly, A. R.</div>
                 </div>
 
                 <div class="publication-item">
-                    <div class="publication-title"><a href="https://www.nature.com/articles/s41612-024-00834-8" target="_blank">Floods, Facts, and Fictions: Numbers and Narratives Behind Bangladesh's 2024 Regional Floods</a></div>
+                    <div class="publication-title"><a href="https://eartharxiv.org/repository/view/8650/" target="_blank">Floods, Facts, and Fictions: Numbers and Narratives Behind Bangladesh's 2024 Regional Floods</a></div>
                     <div class="publication-journal">Preprint at Earth arXiv, 2025 (Under Review)</div>
                     <div class="publication-authors">Das, P., Ganguly, A., Rabb, N., Smith, K., Islam, S.</div>
                 </div>
 
                 <div class="publication-item">
-                    <div class="publication-title"><a href="https://www.nature.com/articles/s41612-024-00834-8" target="_blank">Non-linear dynamical approaches for multi-sector climate resilience under irreducible uncertainty</a></div>
+                    <div class="publication-title"><a href="https://eartharxiv.org/repository/view/8811/" target="_blank">Non-linear dynamical approaches for multi-sector climate resilience under irreducible uncertainty</a></div>
                     <div class="publication-journal">Preprint at Earth arXiv, 2025 (Under Review)</div>
                     <div class="publication-authors">Mawalagedara, R., Ray, A., Das, P., Watson, J., et al.</div>
                 </div>
@@ -334,7 +334,6 @@
                         <li>Supervised Learning</li>
                         <li>Time Series Forecasting</li>
                         <li>Computer Vision</li>
-                        <li>Generative AI</li>
                     </ul>
                 </div>
 
@@ -352,7 +351,6 @@
                     <h3><i class="fas fa-cloud"></i> Climate Modeling</h3>
                     <ul class="skill-list">
                         <li>Earth System Model Data Analysis</li>
-                        
                         <li>Statistical and Dynamical Downscaling</li>
                     </ul>
                 </div>
@@ -363,7 +361,6 @@
                         <li>HEC-RAS</li>
                         <li>HEC-HMS</li>
                         <li>SWMM</li>
-                        <li>VIC</li>
                     </ul>
                 </div>
 
