--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     <section id="contact" class="section contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
-            <p class="section-subtitle">Let's collaborate on climate science and AI research</p>
+            <p class="section-subtitle">Let's collaborate on risk assessment, forecasting, and AI applications.</p>
 
             <div class="contact-info reveal">
                 <div class="contact-item">
