--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="floating-elements">
-            <div class="floating-element" style="top: 20%; left: 10%;"><i class="fas fa-cloud fa-3x"></i></div>
-            <div class="floating-element" style="top: 60%; right: 15%;"><i class="fas fa-satellite fa-2x"></i></div>
-            <div class="floating-element" style="top: 40%; right: 30%;"><i class="fas fa-chart-line fa-2x"></i></div>
+    <div class="floating-element" style="top: 20%; left: 10%;"><i class="fas fa-cloud fa-3x"></i></div>
+    <div class="floating-element" style="top: 60%; right: 15%;"><i class="fas fa-satellite fa-2x"></i></div>
+    <div class="floating-element" style="top: 40%; right: 30%;"><i class="fas fa-chart-line fa-2x"></i></div>
+    <div class="floating-element" style="top: 70%; left: 20%;"><i class="fas fa-temperature-high fa-2x"></i></div>
+    <div class="floating-element" style="top: 25%; right: 10%;"><i class="fas fa-eye fa-2x"></i></div>
+    <div class="floating-element" style="top: 80%; right: 25%;"><i class="fas fa-brain fa-2x"></i></div>
+    <div class="floating-element" style="top: 15%; left: 30%;"><i class="fas fa-database fa-2x"></i></div>
+    <div class="floating-element" style="top: 50%; left: 5%;"><i class="fas fa-water fa-2x"></i></div>
         </div>
         <div class="hero-container">
             <div class="hero-content">
