--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <li><a href="#projects">Research</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#tutorials">Tutorials</a></li>
+                <li><a href="#gis">GIS Works</a></li>
                 <li><a href="#news">In the News</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
