--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://pujadasneu.github.io/">
     <meta property="og:title" content="Puja Das - Research Scientist (Weather and Climate Risks)">
     <meta property="og:description" content="PhD scientist pioneering hybrid physics-AI approaches for extreme weather prediction, developing next-generation climate models that improve flood forecasting accuracy and inform climate adaptation strategies.">
-    <meta property="og:image" content="https://pujadasneu.github.io/headshot.JPG">
+    <meta property="og:image" content="https://pujadasneu.github.io/headshot2.JPG">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
