--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     
         <div class="teaching-grid reveal">
             
-            <!-- Graduate and Undergraduate Teaching -->
+            <!-- University Teaching -->
             <div class="teaching-card">
                 <div class="teaching-icon">
                     <i class="fas fa-chalkboard-teacher"></i>
