--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <div class="cta-buttons">
                     <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     <a href="#projects" class="btn btn-secondary">View Research</a>
+                    <a href="https://drive.google.com/uc?export=download&id=1I_iEEefG4LkDUdMSKAque8qM2pG76e8F" download="Puja_Das_CV.pdf" class="btn btn-cv">Download CV</a>
                 </div>
             </div>
         </div>
