--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="cta-buttons">
                     <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     <a href="#projects" class="btn btn-secondary">View Research</a>
-                    <a href="Puja_Das_CV (3).pdf" download="Puja_Das_CV.pdf" class="btn btn-cv">Download CV</a>
+                    <a href="Puja_Das_CV.pdf" download="Puja_Das_CV.pdf" class="btn btn-cv">Download CV</a>
                 </div>
             </div>
         </div>
