--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                 </div>
 
                 <div class="publication-item">
-                    <div class="publication-title"><a href="https://arxiv.org/abs/2409.14243" target="_blank">Finer Resolutions and Targeted Process Representations in Earth Systems Models Improve Hydrologic Projections</a></div>
-                    <div class="publication-journal">Preprint at arXiv 2409.14243, 2024 (Under Review)</div>
+                    <div class="publication-title"><a href="https://www.nature.com/articles/s41612-025-01134-5" target="_blank">Finer Resolutions and Targeted Process Representations in Earth Systems Models Improve Hydrologic Projections</a></div>
+                    <div class="publication-journal">npj Climate and Atmospheric Science, 8, 247 (2025)</div>
                     <div class="publication-authors">Das, P., Ganguly, A. R.</div>
                 </div>
 
