--- a/index.html
+++ b/index.html
@@ -500,6 +500,36 @@ Engineering and Critical Infrastructure Resilience.</p>
             <p class="section-subtitle">Media coverage of my research and achievements</p>
 
             <div class="news-grid reveal">
+                <div class="news-card featured">
+                    <div class="badge">NEW</div>
+                    <div class="news-icon">
+                        <i class="fas fa-tint"></i>
+                    </div>
+                    <div class="news-content">
+                        <h3 class="news-title">Drying rivers could cause water shortages for 850 million people</h3>
+                        <p class="news-description">Research led by Northeastern University scientists using advanced climate models predicts that 40% of major rivers will experience reduced runoff by 2100, affecting nearly a billion people worldwide - significantly more than previously estimated.</p>
+                        <div class="news-meta">
+                            <span class="news-source">Earth.com</span>
+                            <span class="news-date">2025</span>
+                        </div>
+                        <a href="https://www.earth.com/news/drying-rivers-could-cause-water-shortages-for-850-million-people/?utm_source=dlvr.it&utm_medium=linkedin" target="_blank" class="news-link">Read Article <i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                 <div class="news-card featured">
+                    <div class="badge">NEW</div>
+                    <div class="news-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <div class="news-content">
+                        <h3 class="news-title">High-Level Meeting on the Midterm Review of the Sendai Framework for Disaster Risk Reduction</h3>
+                        <p class="news-description">Comprehensive coverage of the UN's midterm review of the Sendai Framework, assessing global progress in disaster risk reduction and establishing new initiatives for enhanced resilience and risk-informed sustainable development.</p>
+                        <div class="news-meta">
+                            <span class="news-source">UNDRR</span>
+                            <span class="news-date">May 17, 2023</span>
+                        </div>
+                        <a href="https://www.undrr.org/news/daily-report-17-may-2023-high-level-meeting-midterm-review-sendai-framework" target="_blank" class="news-link">Read Article <i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
                 
                 <div class="news-card">
                     <div class="news-icon">
