--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://pujadasneu.github.io/">
     <meta property="og:title" content="Puja Das - Research Scientist (Weather and Climate Risks)">
     <meta property="og:description" content="PhD scientist pioneering hybrid physics-AI approaches for extreme weather prediction, developing next-generation climate models that improve flood forecasting accuracy and inform climate adaptation strategies.">
-    <meta property="og:image" content="https://pujadasneu.github.io/headshot.JPG">
+    <meta property="og:image" content="https://pujadasneu.github.io/HS.jpeg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://pujadasneu.github.io/">
     <meta property="twitter:title" content="Puja Das - Research Scientist (Weather and Climate Risks)">
     <meta property="twitter:description" content="PhD scientist pioneering hybrid physics-AI approaches for extreme weather prediction, developing next-generation climate models that improve flood forecasting accuracy and inform climate adaptation strategies.">
-    <meta property="twitter:image" content="https://pujadasneu.github.io/headshot.JPG">
+    <meta property="twitter:image" content="https://pujadasneu.github.io/HS.jpeg">
     
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FLD4GEVNW4"></script>
@@ -88,7 +88,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content reveal">
                 <div class="about-image">
-                    <img src="headshot.JPG" alt="Puja Das" class="profile-img">
+                    <img src="HS.jpeg" alt="Puja Das" class="profile-img">
                 </div>
                 <div class="about-text">
                     <p>I am a data science expert in the field of climate and weather risks with a PhD in Interdisciplinary Engineering from Northeastern University. My research focuses on extreme weather modeling and developing AI-driven solutions for precipitation forecasting and flood risk assessment.</p>
