--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                     <h3 class="experience-title">Postdoctoral Research Fellow</h3>
                     <div class="experience-company">Institute of Experiential AI, Northeastern University</div>
                     <p class="experience-description">Leading advanced research in AI applications for weather, climate and hydrologic forecasting.</p>
+                    <p class="experience-description">Leading the WEAVE project science team and developing operational flood forecasting systems with TVA. Coordinating multi-institutional collaborations and translating research into practical applications.</p>
                 </div>
 
                 <div class="experience-card">
@@ -165,7 +166,9 @@
                         <li>Python</li>
                         <li>MATLAB</li>
                         <li>R</li>
-                        
+                        <li>SQL</li>
+                        <li>VBA</li>
+                                                
                     </ul>
                 </div>
 
