--- a/index.html
+++ b/index.html
@@ -220,24 +220,35 @@
     </section>
 
     <!-- Research Projects -->
-    <section id="projects" class="section">
-        <div class="container">
-            <h2 class="section-title">Research Projects</h2>
-
-            <div class="projects-grid reveal">
-                <div class="project-card">
-                    <div class="project-icon">
-                        <i class="fas fa-cloud-rain"></i>
-                    </div>
-                    <h3 class="project-title">RAIN Project</h3>
-                    <p class="project-description">Remote-sensing data driven Artificial Intelligence for precipitation-Nowcasting. Developing hybrid physics-ML methodologies for intense orographic precipitation prediction in Appalachia.</p>
-                    <div class="project-tags">
-                        <span class="tag">Machine Learning</span>
-                        <span class="tag">Remote Sensing</span>
-                        <span class="tag">Climate Science</span>
-                    </div>
+<section id="projects" class="section">
+    <div class="container">
+        <h2 class="section-title">Research Projects</h2>
+        <div class="projects-grid reveal">
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fas fa-cloud-rain"></i>
                 </div>
-
+                <h3 class="project-title">RAIN Project</h3>
+                <p class="project-description">Remote-sensing data driven Artificial Intelligence for precipitation-Nowcasting. Developing hybrid physics-ML methodologies for intense orographic precipitation prediction in Appalachia.</p>
+                <div class="project-tags">
+                    <span class="tag">Machine Learning</span>
+                    <span class="tag">Remote Sensing</span>
+                    <span class="tag">Climate Science</span>
+                </div>
+            </div>
+            
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fas fa-chart-line"></i>
+                </div>
+                <h3 class="project-title">WEAVE Project</h3>
+                <p class="project-description">Weather Ensemble Analytics and Visualization Environment - Leading science team developing advanced ensemble weather analytics and visualization tools for enhanced decision-making in weather-sensitive operations.</p>
+                <div class="project-tags">
+                    <span class="tag">Ensemble Analytics</span>
+                    <span class="tag">Visualization</span>
+                    <span class="tag">Decision Support</span>
+                </div>
+            </div>
                 <div class="project-card">
                     <div class="project-icon">
                         <i class="fas fa-city"></i>
@@ -303,10 +314,10 @@
                     <div class="publication-authors">Das, P., Ganguly, A., Rabb, N., Smith, K., Islam, S.</div>
                 </div>
 
-                <div class="publication-item">
-                    <div class="publication-title"><a href="https://eartharxiv.org/repository/view/8811/" target="_blank">Non-linear dynamical approaches for multi-sector climate resilience under irreducible uncertainty</a></div>
-                    <div class="publication-journal">Preprint at Earth arXiv, 2025 (Under Review)</div>
-                    <div class="publication-authors">Mawalagedara, R., Ray, A., Das, P., Watson, J., et al.</div>
+               <div class="publication-item">
+                    <div class="publication-title"><a href="https://www.nature.com/articles/s41612-025-01329-w" target="_blank">Non-linear dynamical approaches for multi-sector climate resilience under irreducible uncertainty</a></div>
+                    <div class="publication-journal">npj Climate and Atmospheric Science 8, no. 1 (2025): 329</div>
+                    <div class="publication-authors">Mawalagedara, R., Ray, A., Das, P., Watson, J., Pal, A., Duffy, K., Bhatia, U., Aldrich, D., Ganguly, A.</div>
                 </div>
             </div>
 
