--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="cta-buttons">
                     <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     <a href="#projects" class="btn btn-secondary">View Research</a>
-                    <a href="Puja_Das_CV.pdf" download="Puja_Das_CV.pdf" class="btn btn-cv">Download CV</a>
+                    <a href="Puja_Das_Cv.pdf" download="Puja_Das_CV.pdf" class="btn btn-cv">Download CV</a>
                 </div>
             </div>
         </div>
@@ -315,7 +315,7 @@
                 </div>
 
                <div class="publication-item">
-                    <div class="publication-title"><a href="https://www.nature.com/articles/s41612-025-01329-w" target="_blank">Non-linear dynamical approaches for multi-sector climate resilience under irreducible uncertainty</a></div>
+                    <div class="publication-title"><a href="https://www.nature.com/articles/s41612-025-01208-4" target="_blank">Non-linear dynamical approaches for multi-sector climate resilience under irreducible uncertainty</a></div>
                     <div class="publication-journal">npj Climate and Atmospheric Science 8, no. 1 (2025): 329</div>
                     <div class="publication-authors">Mawalagedara, R., Ray, A., Das, P., Watson, J., Pal, A., Duffy, K., Bhatia, U., Aldrich, D., Ganguly, A.</div>
                 </div>
