--- a/index.html
+++ b/index.html
@@ -512,6 +512,27 @@ Engineering and Critical Infrastructure Resilience.</p>
         <div class="container">
             <h2 class="section-title">In the News</h2>
             <p class="section-subtitle">Media coverage of my research and achievements</p>
+            <div class="news-grid reveal">
+    <!-- ADD THIS NEW CARD HERE -->
+    <div class="news-card featured">
+        <div class="badge">FEATURED</div>
+        <div class="news-icon">
+            <i class="fas fa-user-graduate"></i>
+        </div>
+        <div class="news-content">
+            <h3 class="news-title">Forecasting for Meaningful Climate Solutions</h3>
+            <p class="news-description">Northeastern University College of Engineering student spotlight featuring my journey from Bangladesh to developing AI-powered precipitation forecasting systems now being integrated by the Tennessee Valley Authority to protect millions of people.</p>
+            <div class="news-meta">
+                <span class="news-source">Northeastern University College of Engineering</span>
+                <span class="news-date">December 11, 2025</span>
+            </div>
+            <a href="https://coe.northeastern.edu/news/forecasting-for-meaningful-climate-solutions/" target="_blank" class="news-link">Read Feature <i class="fas fa-external-link-alt"></i></a>
+        </div>
+    </div>
+    
+    <!-- EXISTING CARDS CONTINUE BELOW -->
+    <div class="news-card featured">
+        <div class="badge">NEW</div>
 
             <div class="news-grid reveal">
                 <div class="news-card featured">
@@ -563,6 +584,7 @@ Engineering and Critical Infrastructure Resilience.</p>
                     <div class="news-icon">
                         <i class="fas fa-newspaper"></i>
                     </div>
+                    
                     <div class="news-content">
                         <h3 class="news-title">The short-term rain forecast system is broken. Can AI do a better job of predicting deadly floods?</h3>
                         <p class="news-description">Northeastern University researchers develop AI-powered flood prediction systems to help communities prepare for extreme weather events.</p>
