--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://pujadasneu.github.io/">
     <meta property="twitter:title" content="Puja Das - Hydrologist & Flood Risk Specialist">
-    <meta property="twitter:description" content="PhD hydrologist specializing in flood hazard modeling, precipitation extremes, remote sensing and operational flood risk assessment. Developing systems that protect communities from extreme weather events.">
+    <meta property="twitter:description" content="PhD hydrologist specializing in flood hazard modeling, precipitation extremes, remote sensing, and operational flood risk assessment. Developing systems that protect communities from extreme weather events.">
     <meta property="twitter:image" content="https://pujadasneu.github.io/HS.jpeg">
     
     <!-- Google Analytics -->
@@ -76,7 +76,7 @@
                 <div class="cta-buttons">
                     <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     <a href="#projects" class="btn btn-secondary">View Research</a>
-                    <a href="Puja_Das_Cv.pdf" download="Puja_Das_CV.pdf" class="btn btn-cv">Download CV</a>
+                    <a href="Puja_Das_CV.pdf" download="Puja_Das_CV.pdf" class="btn btn-cv">Download CV</a>
                 </div>
             </div>
         </div>
