--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="hero-content">
                 <h1>Puja Das</h1>
                 <p class="subtitle">Hydrologist & Flood Risk Specialist</p>
-                <p class="description">PhD scientist specializing in flood hazard modeling, precipitation forecasting, and hydrologic risk assessment. Developing operational forecasting systems that protect communities and infrastructure from extreme weather events.</p>
+                <p class="description">PhD scientist specializing in flood hazard modeling, remote sensing, precipitation forecasting, and hydrologic risk assessment. Developing operational forecasting systems that protect communities and infrastructure from extreme weather events.</p>
                 <div class="cta-buttons">
                     <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     <a href="#projects" class="btn btn-secondary">View Research</a>
@@ -93,7 +93,7 @@
                 <div class="about-text">
                     <p>I am a hydrologist with expertise in flood modeling, risk assessment, and operational forecasting systems. With a PhD in Interdisciplinary Engineering from Northeastern University, I specialize in combining traditional hydrologic methods with advanced AI techniques to improve flood prediction and disaster preparedness.</p>
                     
-                    <p>My work spans flood depth estimation using remote sensing, real-time flood forecasting for river systems, and catastrophe modeling for risk assessment. I have developed operational systems deployed with Tennessee Valley Authority for flood management and hydropower operations, and analyzed major flood events.</p>
+                    <p>My work spans flood depth estimation using remote sensing, real-time flood forecasting for river systems, and catastrophe modeling for risk assessment. I have implemented operational systems deployed with Tennessee Valley Authority for flood management and hydropower operations, and analyzed major flood events.</p>
                     
                     <p>Currently serving as a Postdoctoral Research Fellow at the Institute of Experiential AI, I work at the intersection of hydrology, remote sensing, and data science to build tools that help communities prepare for and respond to flood hazards. My research has been published in Nature journals and presented to stakeholders including federal agencies, water utilities, and emergency management organizations.</p>
                 </div>
